// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Snapshots Deselected 1`] = `
<styled.li
  selected={false}
>
  <Styled(Component)
    onClick={[Function]}
    selected={false}
  >
    Foo
  </Styled(Component)>
</styled.li>
`;

exports[`Tab Snapshots Selected 1`] = `
<styled.li
  selected={true}
>
  <Styled(Component)
    onClick={[Function]}
    selected={true}
  >
    Foo
  </Styled(Component)>
</styled.li>
`;

exports[`TabBar Snapshots No tabs 1`] = `""`;

exports[`TabBar Snapshots Non-tab children 1`] = `
<styled.ul>
  Not a tab at all.
</styled.ul>
`;

exports[`TabBar Snapshots Selected tabs 1`] = `
<styled.ul>
  <Tab
    key=".0"
    name="foo"
    onTabChange={[Function]}
    selected={true}
  >
    Foo
  </Tab>
  <Tab
    key=".1"
    name="bar"
    onTabChange={[Function]}
    selected={false}
  >
    Bar
  </Tab>
</styled.ul>
`;

exports[`TabBar Snapshots Some tabs 1`] = `
<styled.ul>
  <Tab
    key=".0"
    name="foo"
    onTabChange={[Function]}
    selected={false}
  >
    Foo
  </Tab>
  <Tab
    key=".1"
    name="bar"
    onTabChange={[Function]}
    selected={false}
  >
    Bar
  </Tab>
</styled.ul>
`;
